syntax = "proto3";

import "google/protobuf/empty.proto";

package grpc;

service GatewayAPI {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
